# working-days-turkey

./: .gitignore  README.md  pyproject.toml  requirements.txt  working-days-tr.py  working_days_tr.py
.github/: tests.yml
.github/workflows/: python-app.yml
src/working_days_project/: working_days_tr.py
tests/: test_working_days.py
