[tool.poetry]
name = "working-days-turkey"
version = "0.1.0"
description = "Working days TR"
authors = ["Ege Kaplan <egekaplann@gmail.com>"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.dependencies]
python = "^3.8"
convertdate = "^2.4.0"
lunardate = "^0.2.0"
pyluach = "^2.2.0"
PyMeeus = "^0.5.12"
python-dateutil = "^2.8.2"
six = "^1.16.0"
workalendar = "^17.0.0"
pytest = "^8.0.0"
loguru = "^0.7.2"
flake8 = "^4.0.0"

